@@ -2,4 +2,4 @@ include README.md LICENSE MANIFEST.in requirements.txt
 include setup.py
 include tests/*
 include bin/*
-include doc/*
+include docs/*
